<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/loginTopLinearLayout"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="12dp"
            android:text="@string/email_header"
            android:textSize="12sp"
            android:fontFamily="@font/dm_sans_regular"/>

        <EditText
            android:id="@+id/emailLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_custom_edit_text_border"
            android:padding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/dm_sans_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:text="@string/password_header"
            android:textSize="12sp"
            android:fontFamily="@font/dm_sans_regular"/>

        <EditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_custom_edit_text_border"
            android:padding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/dm_sans_regular"/>

        <Button
            android:id="@+id/loginButton"
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login_button"
            android:textSize="15sp"
            android:fontFamily="@font/dm_sans_bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>